; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_getpackethdrs.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_m_getpackethdrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { %struct.mbuf* }

@MT_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mbuf* @m_getpackethdrs(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.mbuf**, align 8
  %7 = alloca %struct.mbuf*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store %struct.mbuf* null, %struct.mbuf** %7, align 8
  store %struct.mbuf** %7, %struct.mbuf*** %6, align 8
  br label %8

8:                                                ; preds = %19, %2
  %9 = load i32, i32* %3, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* %3, align 4
  %11 = icmp ne i32 %9, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @MT_DATA, align 4
  %15 = call %struct.mbuf* @_M_RETRYHDR(i32 %13, i32 %14)
  store %struct.mbuf* %15, %struct.mbuf** %5, align 8
  %16 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %17 = icmp eq %struct.mbuf* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %24

19:                                               ; preds = %12
  %20 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %21 = load %struct.mbuf**, %struct.mbuf*** %6, align 8
  store %struct.mbuf* %20, %struct.mbuf** %21, align 8
  %22 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %23 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %22, i32 0, i32 0
  store %struct.mbuf** %23, %struct.mbuf*** %6, align 8
  br label %8

24:                                               ; preds = %18, %8
  %25 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  ret %struct.mbuf* %25
}

declare dso_local %struct.mbuf* @_M_RETRYHDR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
